# URO

./: .gitignore
Qt/: CMakeLists.txt  addeventview.cpp  addeventview.h  app.cpp  app.h  datepickerpopup.cpp  datepickerpopup.h  eventdetailsview.cpp  eventdetailsview.h  main.cpp  monthview.cpp  monthview.h
ex1/: bikes.csv  main.py
project1/: main.py
